<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RiddleActivity"
    android:background="@color/white"
    android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtGameNameMainRiddle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nome_do_jogo"
                    android:textColor="@color/purple_900"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imgBtnOutMainRiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@color/red_700"
                    android:src="@drawable/ic_close_black_24dp"
                    android:contentDescription="@string/sair" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
                <TextView
                    android:id="@+id/txtFinishedMainRiddle"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/green_700"
                    android:text="@string/finalizado"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/txtDateMainRiddles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/criado_em"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtAddedMainRiddles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adicionados"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtCompletedMainRiddles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completados"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>



            <TextView
                android:id="@+id/txtDescMainRiddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LinearLayout3" />
            <TextView
                android:id="@+id/txtNoPhasesMainRiddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_phases"
                android:textColor="@color/red_700"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescMainRiddle" />

            <Button
                android:id="@+id/btnFase1MainRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_50"
                android:text="@string/fase_1"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescMainRiddle"
                android:visibility="invisible"

                />

            <Button
                android:id="@+id/btnFase2MainRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_100"
                android:text="@string/fase_2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFase1MainRiddles"
                app:layout_constraintTop_toBottomOf="@+id/txtDescMainRiddle"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btnFase3MainRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_200"
                android:text="@string/fase_3"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFase1MainRiddles"
                android:visibility="invisible"

                />

            <Button
                android:id="@+id/btnFase4MainRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_300"
                android:text="@string/fase_4"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFase1MainRiddles"
                app:layout_constraintTop_toBottomOf="@+id/btnFase2MainRiddles"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btnFase5MainRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_400"
                android:text="@string/fase_5"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFase3MainRiddles"
                android:visibility="invisible"

                />

            <Button
                android:id="@+id/btnFase6MainRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_500"
                android:text="@string/fase_6"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFase1MainRiddles"
                app:layout_constraintTop_toBottomOf="@+id/btnFase4MainRiddles"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btnFase7MainRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_600"
                android:text="@string/fase_7"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFase5MainRiddles"
                android:visibility="invisible"

                />

            <Button
                android:id="@+id/btnFase8MainRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_700"
                android:text="@string/fase_8"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFase1MainRiddles"
                app:layout_constraintTop_toBottomOf="@+id/btnFase6MainRiddles"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btnFase9MainRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_800"
                android:text="@string/fase_9"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFase7MainRiddles"
                android:visibility="invisible"

                />

            <Button
                android:id="@+id/btnFase10MainRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_900"
                android:text="@string/fase_10"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFase1MainRiddles"
                app:layout_constraintTop_toBottomOf="@+id/btnFase8MainRiddles"
                android:visibility="invisible"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>