<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="8dp"
    tools:context=".EditRiddle">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtGameNameEditRiddle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nome_do_jogo"
                    android:textColor="@color/purple_900"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imgBtnOutEditRiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@color/red_700"
                    android:src="@drawable/ic_close_black_24dp"
                    android:contentDescription="@string/sair" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/txtDateEditRiddles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/criado_em"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtAddedEditRiddles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adicionados"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtCompletedEditRiddles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completados"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>


            <ImageView
                android:id="@+id/imgCoverEditRiddle"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:src="@drawable/no_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LinearLayout3"
                />

            <TextView
                android:id="@+id/txtDescEditRiddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgCoverEditRiddle" />

            <Button
                android:id="@+id/btnFase1EditRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_50"
                android:text="@string/fase_1"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescEditRiddle"

                />

            <Button
                android:id="@+id/btnFase2EditRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_100"
                android:text="@string/fase_2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFase1EditRiddles"
                app:layout_constraintTop_toBottomOf="@+id/txtDescEditRiddle" />

            <Button
                android:id="@+id/btnFase3EditRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_200"
                android:text="@string/fase_3"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFase1EditRiddles"

                />

            <Button
                android:id="@+id/btnFase4EditRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_300"
                android:text="@string/fase_4"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFase1EditRiddles"
                app:layout_constraintTop_toBottomOf="@+id/btnFase2EditRiddles" />

            <Button
                android:id="@+id/btnFase5EditRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_400"
                android:text="@string/fase_5"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFase3EditRiddles"

                />

            <Button
                android:id="@+id/btnFase6EditRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_500"
                android:text="@string/fase_6"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFase1EditRiddles"
                app:layout_constraintTop_toBottomOf="@+id/btnFase4EditRiddles" />

            <Button
                android:id="@+id/btnFase7EditRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_600"
                android:text="@string/fase_7"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFase5EditRiddles"

                />

            <Button
                android:id="@+id/btnFase8EditRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_700"
                android:text="@string/fase_8"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFase1EditRiddles"
                app:layout_constraintTop_toBottomOf="@+id/btnFase6EditRiddles" />

            <Button
                android:id="@+id/btnFase9EditRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_800"
                android:text="@string/fase_9"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFase7EditRiddles"

                />

            <Button
                android:id="@+id/btnFase10EditRiddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_900"
                android:text="@string/fase_10"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFase1EditRiddles"
                app:layout_constraintTop_toBottomOf="@+id/btnFase8EditRiddles" />

            <Button
                android:id="@+id/btnNewPhaseEditRiddle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nova_fase"
                android:background="@color/green_A700"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFase10EditRiddles" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>