<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="novasclasses.Settings"
    android:background="@color/deep_purple_100"
    >

    <!-- TODO: Update blank fragment layout -->
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:scrollbars="vertical"
        >
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        >
    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="18sp"
        android:textColor="@color/blue_800"
        />
    <TextView
        android:id="@+id/nameUserSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_nome"
        android:textSize="18sp"
        android:textColor="@color/indigo_900"
        android:textStyle="italic"
            />
    <ImageButton
        android:background="@color/transparent"
        android:id="@+id/editNameImgSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_create_black_24dp" />

    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
        android:layout_marginTop="16dp"
    >
    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:textColor="@color/blue_800"
        />
    <TextView
        android:id="@+id/nameEmailSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seu_email"
        android:textSize="18sp"
        android:textColor="@color/indigo_900"
        android:textStyle="italic"
        />

  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp"
      >
      <TextView
          android:layout_width="120dp"
          android:layout_height="wrap_content"
          android:text="@string/sexo"
          android:textSize="18sp"
          android:textColor="@color/blue_800"
            />
      <TextView
          android:id="@+id/nameGenderSetting"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/seu_sexo"
          android:textSize="18sp"
          android:textColor="@color/indigo_900"
          android:textStyle="italic"
            />
      <ImageButton
          android:background="@color/transparent"
          android:id="@+id/editGenderImgSetting"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_create_black_24dp"
          />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/nasc"
            android:textSize="18sp"
            android:textColor="@color/blue_800"
            />
        <TextView
            android:id="@+id/nameBirthSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_de_nascimento"
            android:textSize="18sp"
            android:textColor="@color/indigo_900"
            android:textStyle="italic"
            />
        <ImageButton
            android:background="@color/transparent"
            android:id="@+id/editBirthImgSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_create_black_24dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nos contate"
            android:textSize="18sp"
            android:textColor="@color/light_bg_dark_primary_text"
            />
        <ImageButton
            android:background="@color/transparent"
            android:id="@+id/contactImgSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />


    </LinearLayout>
    <Button
        android:id="@+id/logOutButton"
        android:layout_width="100dp"
        android:padding="4dp"
        android:layout_height="wrap_content"
        android:text="@string/sair"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:background="@color/red_700"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:gravity="center"
        />

</LinearLayout>
</FrameLayout>
